  Yaroslav Halchenko.
- Added/improved filters and date formats.
- Added actions to report abuse to ISP, DShield and
  myNetWatchman. Thanks to Russell Odom.
- Suse init script. Remove socket file on startup is fail2ban
  crashed. Thanks to Detlef Reichelt.
- Removed begin-line anchor for "standard" timestamp. Fixed
  Debian bug #500824.
- Added nagios script. Thanks to Sebastian Mueller.

ver. 0.8.3 (2008/07/17) - stable
----------
- Process failtickets as long as failmanager is not empty.
- Added "pam-generic" filter and more configuration fixes.
  Thanks to Yaroslav Halchenko.
- Fixed socket path in redhat and suse init script. Thanks to
  Jim Wight.
- Fixed PID file while started in daemon mode. Thanks to
  Christian Jobic who submitted a similar patch.
- Fixed "fail2ban-client get <jail> logpath". Bug #1916986.
- Added gssftpd filter. Thanks to Kevin Zembower.
- Added "Day/Month/Year Hour:Minute:Second" date template.
  Thanks to Dennis Winter.
- Fixed ignoreregex processing in fail2ban-client. Thanks to
  René Berber.
- Added ISO 8601 date/time format.
- Added and changed some logging level and messages.
- Added missing ignoreregex to filters. Thanks to Klaus
  Lehmann.
- Use poll instead of select in asyncore.loop. This should
  solve the "Unknown error 514". Thanks to Michael Geiger and
  Klaus Lehmann.

ver. 0.8.2 (2008/03/06) - stable
----------
- Fixed named filter. Thanks to Yaroslav Halchenko
- Fixed wrong path for apache-auth in jail.conf. Thanks to
  Vincent Deffontaines
- Fixed timezone bug with epoch date template. Thanks to
  Michael Hanselmann
- Added "full line failregex" patch. Thanks to Yaroslav
  Halchenko. It will be possible to create stronger failregex
  against log injection
- Fixed ipfw action script. Thanks to Nick Munger
- Removed date from logging message when using SYSLOG. Thanks
  to Iain Lea
- Fixed "ignore IPs". Only the first value was taken into
  account. Thanks to Adrien Clerc
- Moved socket to /var/run/fail2ban.